--- a/flutter_web_preview/vercel.json
+++ b/flutter_web_preview/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "flutter build web --release",
-  "outputDirectory": "build/web",
-  "installCommand": "flutter pub get"
+  "github": {
+    "silent": true
+  }
 }
